--- a/puplic/css/_scr-special.scss
+++ b/puplic/css/_scr-special.scss
@@ -136,6 +136,9 @@
                         }
                     }
                 }
+                .back-btn-contianer{
+                    display: none;
+                }
             }
             // end register and sign in
         }
